<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.andro.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.android.justjava.MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_question_1" />

        <RadioGroup
            android:id="@+id/rg_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1_for_q1" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2_for_q1" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_question_2" />

        <CheckBox
            android:id="@+id/check_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1_for_q2" />

        <CheckBox
            android:id="@+id/check_box2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2_for_q2" />

        <CheckBox
            android:id="@+id/check_box3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3_for_q2" />

        <CheckBox
            android:id="@+id/check_box4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4_for_q2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_question_3" />

        <RadioGroup
            android:id="@+id/rg_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1_for_q3" />

            <RadioButton
                android:id="@+id/radio_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2_for_q3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_question_4" />

        <CheckBox
            android:id="@+id/check_box5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1_for_q4" />

        <CheckBox
            android:id="@+id/check_box6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2_for_q4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_question_5" />

        <EditText
            android:id="@+id/write_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/write_answer"
            android:inputType="number"
            android:maxLines="1" />

        <Button
            android:id="@+id/submit_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_answer" />


    </LinearLayout>


</ScrollView>